reformat, async, improve readme

--- a/example.env
+++ b/example.env
@@ -1,2 +1,5 @@
-TOKEN=
-MONGODB_URI=
+# get one from botfather (https://t.me/BotFather)
+TOKEN=YOUR_BOT_TOKEN
+
+# https://www.mongodb.com/docs/manual/reference/connection-string/
+MONGODB_URI=YOUR_MONGODB_URI
