--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram>=3.0.0
-aiohttp>=3.8.5
-pymongo>=4.5.0
-python-dotenv>=1.0.0
+aiogram~=3.2.0
+aiohttp~=3.9.0
+motor~=3.3.2
+python-dotenv~=1.0.0
